--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "bluebird": "^2.9.8",
-    "nodejs-lighter": "git+ssh://git@github.com:2ViVe/nodejs-lighter.git",
+    "nodejs-lighter": "git+ssh://git@github.com:2ViVe/nodejs-lighter.git#v0.4.0",
     "socket.io": "^1.3.3"
   },
   "devDependencies": {
